--- a/02_theory.tex
+++ b/02_theory.tex
@@ -2,7 +2,7 @@
 \label{ch:theory}
 \section{Automatic differentiation}
 \label{sec:AD}
-Automatic differentiation (AD) is a method that makes the computer derive the derivatives with very little effort from the user. If you have not heard of AD before, the first thing that you might think of is algebraic or symbolic differentiation. In this type of differentiation the computer learns the basic rules from calculus like e.g.
+Automatic differentiation (AD) is a method that enables a computer to numerically evaluate the derivative of a function specified by a computer program with very little effort from the user. If you have not heard of AD before, the first thing you might think of is algebraic or symbolic differentiation. In this type of differentiation the computer learns the basic rules from calculus like, e.g.,
 \begin{align*}
     &\frac{d}{dx}x^n     = n\cdot x^{n-1} \\
     &\frac{d}{dx}cos(x)  = -sin(x) \\
@@ -15,21 +15,21 @@ etc. and the chain- and product rule
 \end{align*}
 The computer will then use these rules on symbolic variables to obtain the derivative of any function given. This will give perfectly accurate derivatives, but the disadvantage with this approach is that it is computational demanding and as f(x) becomes more complex, the calculations will become slow.
 
-If AD is not symbolic differentiation you might think that it is finite differences, where you use the definition of the derivative
+If AD is not symbolic differentiation, you might think that it is finite differences, where you use the definition of the derivative
 \begin{equation*}
     \frac{df}{dx} = \frac{f(x+h) - f(x)}{h}
 \end{equation*}
-with a small $h$ to obtain the numerical approximation of the derivative of $f$. This approach is not optimal because, first of all, if you choose an $h$ too small, you will get problems with rounding errors on your computer. This is because when h is small, you will subtract two very similar numbers, $f(x+h)$ and $f(x)$ and then divide by a small number $h$. This means that any small rounding errors in the subtraction, that may occur i.e. because of machine precision, will be hugely magnified by the division. Secondly, if you choose $h$ too large your approximation of the derivative will not be accurate. This is called the truncation error. Hence in finite differences you have the problem that you need a small step size $h$ to reduce the truncation error, but $h$ can not be too small, because the you get round-off errors. Hence the finite differences method is an unstable method and is not what we call AD.
+with a small $h$ to obtain the numerical approximation of the derivative of $f$. This approach is not optimal because, first of all, if you choose an $h$ too small, you will get problems with rounding errors on your computer. This is because when h is small, you will subtract two very similar numbers, $f(x+h)$ and $f(x)$ and then divide by a small number $h$. This means that any small rounding errors in the subtraction, which may occur, e.g., because of machine precision, will be amplified by the division. Secondly, if you choose $h$ too large, your approximation of the derivative will not be accurate. This is called truncation error. Hence, in finite differences you have the problem that you need a small step size $h$ to reduce the truncation error, but $h$ can not be too small, because then you get round-off errors. Hence, the finite-difference method is an unstable and is not what we call AD.
 
-AD can be split into two different methods - forward AD and backward AD. Both methods are similar to symbolic differentiation in the way that we implement the differentiation rules, but they differ by instead of differentiating symbols and then inserting values for the symbols, we keep track of the function values and the corresponding values of the derivatives as we go. Both methods does this by separating each expression into a finite set of elementary operations. 
+AD can be split into two different methods -- forward AD and backward AD. Both methods are similar to symbolic differentiation in the way that we implement the differentiation rules, but they differ by instead of differentiating symbols and then inserting values for the symbols, we keep track of the function values and the corresponding values of the derivatives as we go. Both methods do this by separating each expression into a finite set of elementary operations. 
 
 \subsection{Forward Automatic Differentiation}
-In forward AD, the function and derivative value is stored in a tuple $[\cdot, \cdot]$. In this way, we can continuously update both the function value and the derivative value for every operation we perform on the function. 
+In forward AD, the function and derivative value are stored in a tuple $[\cdot, \cdot]$. In this way, we can continuously update both the function value and the derivative value for every operation we perform on the function. 
 
-As an example, consider the scalar function $f = f(x)$ with its derivative $f_x$ where $x$ is a scalar variable. Then the AD-variable $x$ is the pair $[x, 1]$ and for f we have [$f$, $f_x$]. In the pair $[x,1]$, $x$ is the numerical value of $x$ and $1 = \frac{dx}{dx}$. Similar for $f(x)$ where $f$ is the numerical value of $f(x)$ and $f_x$ the numerical value of $f'(x)$.  We then define the arithmetic operators for such pairs such that for functions $f$ and $g$,
+As an example, consider the scalar function $f = f(x)$ with its derivative $f_x$ where $x$ is a scalar variable. Then the AD-variable $x$ is the pair $[x, 1]$ and for $f$ we have [$f$, $f_x$]. In the pair $[x,1]$, $x$ is the numerical value of $x$ and $1 = \frac{dx}{dx}$. Similar for $f(x)$, where $f$ is the numerical value of $f(x)$ and $f_x$ the numerical value of $f'(x)$.  We then define the arithmetic operators for such pairs such that for functions $f$ and $g$,
 \begin{equation}
     \begin{aligned}
-    &\big[f \hspace{0.5em} , \hspace{0.5em}  f_x\big] \pm \big[g \hspace{0.5em} , \hspace{0.5em}  g_x\big] = \big[f \pm g \hspace{0.5em} , \hspace{0.5em}  f_x \pm g_x\big] \hspace{0.5em}, \\\\
+    &\big[f \hspace{0.5em}, \hspace{0.5em}  f_x\big] \pm \big[g \hspace{0.5em} , \hspace{0.5em}  g_x\big] = \big[f \pm g \hspace{0.5em} , \hspace{0.5em}  f_x \pm g_x\big] \hspace{0.5em}, \\\\
     &\big[f \hspace{0.5em} , \hspace{0.5em}  f_x\big]\cdot \big[g \hspace{0.5em} , \hspace{0.5em}  g_x\big] = \big[f\cdot g \hspace{0.5em} , \hspace{0.5em}  f_x\cdot g + f\cdot g_x\big],\\\\
     &\frac{\big[f \hspace{0.5em} , \hspace{0.5em}  f_x\big]}{\big[g \hspace{0.5em} , \hspace{0.5em}  g_x\big]} = \Bigg[\frac{f}{g} \hspace{0.5em} , \hspace{0.5em}  \frac{f_x\cdot g - f\cdot g_x}{g^2}\Bigg].
 \end{aligned}
@@ -50,18 +50,18 @@ The only thing that remains to define are the rules concerning elementary functi
 \label{eq:elementaryFunctions}
 \end{equation}
 
-When these arithmetic operators and the elementary function are implemented you are able to calculate any scalar function derivative without actually doing any form of differentiation yourselves. Let us look at an step by step example where 
+When these arithmetic operators and the elementary functions are implemented, you are able to evaluate the derivative of any scalar function without actually doing any form of differentiation yourselves. Let us look at an step by step example where 
 \begin{equation}
     \label{eq:forwardADExample}
     f(x) = x\cdot\exp(2x) \hspace{3em} \text{for}\hspace{1em} x = 2.
 \end{equation}
-Then the declaration of the AD-variable gives $x = [2 \hspace{0.5em} , \hspace{0.5em}  1]$. All scalars can be looked at as AD variables with derivative equal to 0 such that
+The declaration of the AD-variable gives $x = [2 \hspace{0.5em} , \hspace{0.5em}  1]$. All scalars can be viewed as AD variables with derivative equal to 0 such that
 \begin{align*}
     2x &= [2 \hspace{0.5em} , \hspace{0.5em}  0]\cdot [2 \hspace{0.5em} , \hspace{0.5em} 1] \\
     &=[2\cdot2 \hspace{0.5em} , \hspace{0.5em}  0\cdot1 + 2\cdot 1]\\
     &=[4 \hspace{0.5em} , \hspace{0.5em} 2].
 \end{align*}
-After this computation we get from the exponential
+After this computation, we get from the exponential
 \begin{align*}
     \exp(2x) &= \exp\big([4 \hspace{0.5em} , \hspace{0.5em} 2]\big)\\
     &= [\exp(4) \hspace{0.5em} , \hspace{0.5em} \exp(4)\cdot 2],
@@ -115,11 +115,11 @@ The weakness of implementing AD with dual numbers is clear for functions with mu
     f(x,y,z) &= (2+1\epsilon)\cdot(3+0\epsilon) + (1+0\epsilon)\\
         &=7+3\epsilon.
 \end{align*}
-$7$ is now the function value of $f$, while $3$ is the derivative value of $f$ with respect to $x$, $f_x$. To obtain $f_y$ and $f_z$ we need two more function evaluations with respectively $y$ and $z$ as the varying parameters. This example illustrates the weakness of forward AD implemented with dual numbers - when the function evaluated have $n$ input variables, we need $n$ function evaluations to determine the gradient of the function.
+Here, $7$ is the function value of $f$, while $3$ is the derivative value $f_x$ of $f$ with respect to $x$. To obtain $f_y$ and $f_z$, we need two more function evaluations with respectively $y$ and $z$ as the varying parameters. This example illustrates the weakness of forward AD implemented with dual numbers -- when the function evaluated has $n$ input variables, we need $n$ function evaluations to determine the gradient of the function.
 
 \subsection{Backward Automatic Differentiation}
 \label{sec:BackwardAD}
-The main disadvantage with forward AD is when there are many input variables and you want the derivative with respect to all variables. This is where Backward AD is a more efficient way of obtaining the derivatives. To explain backward AD it is easier to first consider the approach for forward AD, where the method also can be be explained as an extensive use of the chain rule
+The main disadvantage with forward AD is when there are many input variables and you want the derivative with respect to all variables. This is where backward AD is a more efficient way of obtaining the derivatives. To explain backward AD it is easier to first consider the approach for forward AD, where the method also can be be explained as an extensive use of the chain rule
 \begin{equation}
     \label{eq:chainRule}
     \frac{\partial f}{\partial t} = \sum_i\left(\frac{\partial f}{\partial u_i}\cdot\frac{\partial u_i}{\partial t}\right).
@@ -212,13 +212,13 @@ The calculation of the derivatives together with a dependency graph can be seen 
 Comparing this to the method of Dual Numbers were we would have to evaluate $f$ three times, one for each derivative, this is a big improvement. This illustrates the strength of backward AD - no matter how many input parameters a function have, you only need one function evaluation to get all the derivatives of a function. The disadvantage of backward AD is that when we implement this, in differ from what we did in the example above when we did it by hand, we still only want to carry along the function- and the derivative values as we did in forward AD. This means that we have to implement the dependency tree shown in \autoref{fig:depency_graph_backward_AD}. This makes the implementation of backward AD much harder than for forward AD and a bad implementation of this tree will reduce the advantage of backward AD. Also if the function is a vector function and not a scalar function, backward AD needs to run $m$ times if $f: \Re^n \rightarrow \Re^m$, hence if $n\approx m$, forward AD and backward AD will have approximately the same complexity. This is some of the reason why we here will have focus on implementing forward AD.
 
 \subsection{Forward Automatic Differentiation with multiple parameters}
-When we are dealing with functions with many input parameters and we wish to implement a forward AD, there are more efficient ways of doing this than implementing with Dual Numbers. Knut-Andreas Lie describes in \emph{\citet{lieMrstUrl}} a method where we do not need $n$ function evaluations for $n$ input parameters. Say we have a scalar function $f: \Re^n \rightarrow \Re$ and we want to obtain the gradient of $f$. Then the main idea is when we define our AD-variables, instead of having each AD-variable storing only the derivative with respect to itself, they store their gradient to the corresponding space they are in. This means we have to define what we call our primary variables which is all the variables in the relevant space. Say we have three variables $x$, $y$ and $z$ and for any function $f(x,y,z)$ we are interested in finding the gradient of $f$, $\nabla f=(f_x,\hspace{0.5em} f_y,\hspace{0.5em} f_z)^\top$. To achieve this we define the corresponding AD-variables
+When we are dealing with functions with many input parameters and we wish to implement a forward AD, there are more efficient ways of doing this than implementing with dual numbers. \emph{\citet{lieMrstUrl}} describes a method in which we do not need $n$ function evaluations for $n$ input parameters. Say we have a scalar function $f: \Re^n \rightarrow \Re$ and we want to obtain the gradient of $f$. Then the main idea is when we define our AD-variables, instead of having each AD-variable storing only the derivative with respect to itself, they store their gradient to the corresponding space they are in. This means we have to define what we call our primary variables, which are all the variables in the relevant space. Say we have three variables $x$, $y$ and $z$ and for any function $f(x,y,z)$ we are interested in finding the gradient of $f$, $\nabla f=(f_x,\hspace{0.5em} f_y,\hspace{0.5em} f_z)^\top$. To achieve this we define the corresponding AD-variables
 \begin{equation*}
     [x\hspace{0.5em},\hspace{0.5em}(1,0,0)^\top]\hspace{2em},\hspace{2em}
     [y\hspace{0.5em},\hspace{0.5em}(0,1,0)^\top]\hspace{2em},\hspace{2em}
     [z\hspace{0.5em},\hspace{0.5em}(0,0,1)^\top].
 \end{equation*}
-Each primary AD-variable now not only store their derivative with respect to themselves, but the gradient. The operators defined in Equations \ref{eq:arithmeticOperators} and the elementary functions in Equations \ref{eq:elementaryFunctions} are still valid, but instead of scalar products they are now vector products. As an example let $f(x,y,z) = xyz$ and $x = 1$, $y = 2$ and $z = 3$, then
+Each primary AD-variable now not only stores its derivative with respect to itself, but also the gradient with respect to all other primary variables. The operators defined in Equations (\ref{eq:arithmeticOperators}) and the elementary functions in Equations (\ref{eq:elementaryFunctions}) are still valid, but instead of scalar products they are now vector products. As an example let $f(x,y,z) = xyz$ and $x = 1$, $y = 2$ and $z = 3$, then
 \begin{align*}
     xyz &= [1\hspace{0.5em},\hspace{0.5em}(1,0,0)^\top]\cdot [2\hspace{0.5em},\hspace{0.5em}(0,1,0)^\top]\cdot
     [3\hspace{0.5em},\hspace{0.5em}(0,0,1)^\top] \\
@@ -231,22 +231,25 @@ This result is equal to the tuple
 \end{equation*}
 for the corresponding $x$, $y$ and $z$ values. In numerical applications, as we are dealing with discretizations, the functions we evaluate are usually  vector functions and not scalar functions, hence $f: \Re^n \rightarrow \Re^m$. Then it is the Jacobian of $f$ we are interested in
 \begin{align*}
-    \mat{J}  =
+    J  =
     \begin{bmatrix}
         \frac{\partial f_1}{\partial x_1} & \dotsb & \frac{\partial f_1}{x_n}\\
         \vdots & \ddots & \vdots \\
         \frac{\partial f_m}{\partial x_1} & \dotsb & \frac{\partial f_m}{x_n}
     \end{bmatrix}.
 \end{align*}
-The forward AD method described above will be similar for a vector function as it was for a scalar function above, but there will be two differences in particular. The first one is that the primal variables needs to be initialized with their Jacobians and not just a gradient vector. The Jacobian for a primary variable of dimension $n$ will be the $n \times n$ identity matrix. The second change is that when evaluating new functions depending on the primary variables, the Jacobians corresponding to the functions will be calculated with matrix operations instead of vector operations as seen above. 
+The forward AD method described above will be similar for a vector function as it was for a scalar function above, except for two important differences. The first one is that the primal variables need to be initialized with their Jacobians and not just with a gradient vector. The Jacobian for a primary variable of dimension $n$ is the $n \times n$ identity matrix. The second change is that when evaluating new functions depending on the primary variables, the Jacobians corresponding to the functions will be calculated with matrix operations instead of vector operations as seen above. 
 
 \section{Applications of Automatic Differentiation}
 \label{sec:ApplicationsAD}
-AD can be used in a wide spectre of applications, but in common for them all is that we have a function, vector or scalar, we either want to minimise or find the roots of. The simplest example for finding roots is for a scalar function $f$ with a scalar input $x$. Then the iteration scheme
+AD can be used in a wide spectre of applications; common for many of them is that we have a vector or scalar function we want to minimize or find the roots of.
+
+\subsection{The Newton--Raphson Method}
+The simplest example for finding roots is for a scalar function $f$ with a scalar input $x$. Then the Newton--Raphson method
 \begin{equation*}
     x_{i+1} = x_i - \frac{f(x_i)}{f'(x_i)},
 \end{equation*}
-for an initial $x_0$, will converge to a root of $f$ given that it satisfies the assumptions made in the derivation of the formulae. This is called the Newton-Raphson method \todo{Is it necessary to have reference here? If so what kind of?}. With AD this is super easy as you only have to define the function $f(x)$ and then the AD finds $f'(x)$ automatically and you can use the Newton-Raphson method directly. Exactly the same approach can be used to solve linear systems in multiple dimensions. Let us look at the linear system 
+for an initial $x_0$, will converge to a root of $f$ given that $f$ is sufficiently smooth. With AD, this is quite simple to implement as you only have to define the function $f(x)$ and then AD finds $f'(x)$ automatically and you can use the Newton-Raphson method directly. Exactly the same approach can be used to solve linear systems in multiple dimensions. Let us look at the linear system 
 \begin{equation}
     \textbf{A}\boldsymbol{x} = \textbf{b}.
     \label{eq:linearSystem}
@@ -255,22 +258,25 @@ But instead of looking at it like in equation \eqref{eq:linearSystem} we write i
 \begin{equation*}
 	\boldsymbol{F}(\boldsymbol{x}) = \textbf{A}\boldsymbol{x} - \boldsymbol{b} = 0 .
 \end{equation*}
-This means that to solve the linear system in equation \eqref{eq:linearSystem}, we need to find the root of $\boldsymbol{F}(\boldsymbol{x})$. This can be done by choosing an initial value $\boldsymbol{x}^0$ and observe that since $\boldsymbol{F}(\boldsymbol{x})$ is linear, this will converge in one step using the multivariate Newton-Raphson method. The general form of the multivariate Newton-Raphson method is given by
+This means that to solve the linear system in Equation \eqref{eq:linearSystem}, we need to find the root of $\boldsymbol{F}(\boldsymbol{x})$. This can be done by choosing an initial value $\boldsymbol{x}^0$ and observe that since $\boldsymbol{F}(\boldsymbol{x})$ is linear, this will converge in one step using the multivariate Newton-Raphson method. The general form of the multivariate Newton-Raphson method is given by
 \begin{equation}
-	\boldsymbol{x}^{n+1} = \boldsymbol{x}^n - \left[J_{\boldsymbol{F}}  (\boldsymbol{x}^n)\right]^{-1} \boldsymbol{F}(\boldsymbol{x}^n).
+	\boldsymbol{x}^{n+1} = \boldsymbol{x}^n - J_{\boldsymbol{F}}  (\boldsymbol{x}^n)^{-1} \boldsymbol{F}(\boldsymbol{x}^n).
     \label{eq:newtonRaphsonVector}
 \end{equation}
-Here $\left[J_{\boldsymbol{F}}  (\boldsymbol{x}^n)\right]^{-1}$ is the inverse of the Jacobian of $\boldsymbol{F}$ at $\boldsymbol{x}^n$. For a simple linear system like equation \eqref{eq:linearSystem} it may seem a bit forced and not necessary to make the effort to use AD to solve for $\boldsymbol{x}$. We could just as well have used some built in linear solver instead. But for numerical application we can with this method easily solve non-linear equations that we obtain from the PDEs by looking at the residual form of the equations we obtain and use the Newton-Raphson method \eqref{eq:newtonRaphsonVector} with AD. As a preface to introducing how we will do this, consider the Poisson equation
+Here $J_{\boldsymbol{F}}  (\boldsymbol{x}^n)^{-1}$ is the inverse of the Jacobian of $\boldsymbol{F}$ at $\boldsymbol{x}^n$. 
+
+\subsection{Solving the Poisson Equation}
+For a simple linear system like Equation \eqref{eq:linearSystem} it may seem a bit forced and not necessary to make the effort to use AD to solve for $\boldsymbol{x}$. We could just as well have used some built in linear solver instead. But for numerical application we can with this method easily solve non-linear equations that we obtain from the PDEs by looking at the residual form of the equations we obtain and use the Newton-Raphson method \eqref{eq:newtonRaphsonVector} with AD.  As a preface to introducing how we will do this, consider the Poisson equation
 \begin{equation}
     -\nabla(\textbf{K}\nabla u) = q,
     \label{eq:Poisson}
 \end{equation}
 where \textbf{K} is an diffusion coefficient and we want to find $u$ on $\Omega \in \Re^d$. Numerically this can be done by using a finite volume method. This approach is based on applying conservation laws inside the domain. By dividing the domain into smaller cells, $\Omega_i$, we can instead of looking at the Poisson equation in differential form, integrate it on each cell such that
 \begin{equation}
-    \int_{\partial\Omega_i} - \textbf{K} \nabla u \cdot \textbf{n} ds = \int_{\Omega_i} q dA.
+    \int_{\partial\Omega_i} - \textbf{K} \nabla u \cdot \textbf{n}\, \mbox{ds} = \int_{\Omega_i} q \,\mbox{dA}.
     \label{eq:conservation}
 \end{equation}
-Here \textbf{n} is the unit normal to the cell $\Omega_i$, so equation \eqref{eq:conservation} describes the conservation of mass in the cell $\Omega_i$ where total flux in and out of the boundary of $\Omega_i$ is equal to the total production in $\Omega_i$. For simplicity we define $\textbf{v} = - \textbf{K} \nabla u$ as the flux. As a simple example to begin with, we will consider \autoref{fig:gridTwoCells} who shows two cells $\Omega_i$ and $\Omega_k$. They both have a value $u_i$ and $u_k$ in the centre of the cell and the boundary, or facet, between the cells is defined as $\Gamma_{i,k}$.
+Here, \textbf{n} is the unit normal to the cell $\Omega_i$, so Equation \eqref{eq:conservation} describes the conservation of mass in the cell $\Omega_i$ where total flux in and out of the boundary of $\Omega_i$ is equal to the total production in $\Omega_i$. For simplicity, we define $\textbf{v} = - \textbf{K} \nabla u$ as the flux. As a simple example to begin with, we will consider \autoref{fig:gridTwoCells}, which shows two cells $\Omega_i$ and $\Omega_k$. They both have a value $u_i$ and $u_k$ in the centre of the cell and the boundary, or facet, between the cells is defined as $\Gamma_{i,k}$.
 \begin{figure}[htb]
     \centering
     \includegraphics[width = 0.7\textwidth]{figures/grid_two_cells.pdf}
@@ -278,56 +284,58 @@ Here \textbf{n} is the unit normal to the cell $\Omega_i$, so equation \eqref{eq
     \label{fig:gridTwoCells}
 \end{figure}
 
- Now the flux through the boundary $\Gamma_{i,k}$ can be computed by
+ Now, the flux through the boundary $\Gamma_{i,k}$ can be computed by
 \begin{equation}
-    v_{i,k} = \int_{\Gamma_{i,k}} \textbf{v}\cdot\textbf{n}_{i,k} ds 
+    v_{i,k} = \int_{\Gamma_{i,k}} \textbf{v}\cdot\textbf{n}_{i,k} \mbox{ds}. 
     \label{eq:fluxOverBoundary}
 \end{equation}
 If we let $L_{i,k}$ be the length of $\Gamma_{i,k}$, then the integral in \eqref{eq:fluxOverBoundary} can be approximated by the midpoint rule with $\tilde{\textbf{v}}_{i,k}$ as the flux on the midpoint of $\Gamma_{i,k}$ 
 \begin{equation*}
     v_{i,k} \approx L_{i,k}\tilde{\textbf{v}}_{i,k} \cdot \textbf{n}_{i,k} = -L_{i,k}\textbf{K}\nabla \tilde{u}_{i,k} \cdot \textbf{n}_{i,k}.
 \end{equation*}
-Here $\tilde{u}_{i,k}$ is the value of $u$ at the centre of the facet $\Gamma_{i,k}$. The problem we now face is that in the finite volume method, we only have the value of $u$ at the center of cell $\Omega_i$, $u_i$, and not on the facet, $\tilde{u}_{i,k}$. This means that finding the gradient of $u$ on $\Gamma_{i,k}$ using the approximation
+Here, $\tilde{u}_{i,k}$ is the value of $u$ at the centre of the facet $\Gamma_{i,k}$. The problem we now face is that in the finite volume method, we only have the value of $u$ at the center of cell $\Omega_i$, $u_i$, and not on the facet, $\tilde{u}_{i,k}$. This means that finding the gradient of $u$ on $\Gamma_{i,k}$ using the approximation
 \begin{equation*}
     v_{i,k} \approx L_{i,k}\textbf{K}_i\frac{(\tilde{u}_{i,k} - u_i)\textbf{c}_{i,k}}{|\textbf{c}_{i,k}|^2} \cdot \textbf{n}_{i,k},
 \end{equation*}
-can not be computed directly. Here $\textbf{c}_{i,k}$ is the vector from $u_i$ to $\tilde{u}_{i,k}$ as seen in \autoref{fig:gridTwoCells} . To handle this we first define what we call a transmissibility matrix where
+can not be computed directly. Here, $\textbf{c}_{i,k}$ is the vector from $u_i$ to $\tilde{u}_{i,k}$ as seen in \autoref{fig:gridTwoCells}.  For brevity, we first define what we call a transmissibility
 \begin{equation}
     T_{i,k}(\tilde{u}_{i,k} - u_i) = L_{i,k}\textbf{K}_i\frac{(\tilde{u}_{i,k} - u_i)\textbf{c}_{i,k}}{|\textbf{c}_{i,k}|^2} \cdot \textbf{n}_{i,k}.
     \label{eq:transmissibility}
 \end{equation}
-Because we know that the amount of flux from cell $\Omega_i$ to $\Omega_k$ must be the same as from $\Omega_k$ to $\Omega_i$ only with opposite sign. This gives us the relations $v_{i,k} = -v_{k,i}$ and from \autoref{fig:gridTwoCells} it is clear that $\tilde{u}_{i,k} = \tilde{u}_{k,i}$. Hence we have the relation 
+Because we know that the amount of flux from cell $\Omega_i$ to $\Omega_k$ must be the same as from $\Omega_k$ to $\Omega_i$, only with opposite sign, we have the relation $v_{i,k} = -v_{k,i}$.  In most cases, we will also have continuity across the interface, so that $\tilde{u}_{i,k} = \tilde{u}_{k,i}$. Hence, we have the relation 
 \begin{equation*}
-    v_{i,k} = T_{i,k}(\tilde{u}_{i,k} - u_i) \hspace{3em} -v_{i,k} = T_{k,i}(\tilde{u}_{i,k} - u_k)
+    v_{i,k} = T_{i,k}(\tilde{u}_{i,k} - u_i) \hspace{3em} -v_{i,k} = T_{k,i}(\tilde{u}_{i,k} - u_k).
 \end{equation*}
-By subtraction the two equations for $v_{k,i}$ and moving $T_{i,k}$ and $T_{k,i}$ to the other side 
+By subtracting the two equations for $v_{i,k}$ and moving $T_{i,k}$ and $T_{k,i}$ to the other side 
 \begin{equation}
     \begin{aligned}
         (T_{i,k}^{-1} + T_{k,i}^{-1}) v_{i,k} &= (\tilde{u}_{i,k} - u_i) - (\tilde{u}_{i,k} - u_k)
         \\
-        v_{i,k} &= (T_{i,k}^{-1} + T_{k,i}^{-1})^{-1}(u_k - u_i) \\
-        v_{i,k} &= T_{i,k}(u_k - u_i)
+        v_{i,k} &= (T_{i,k}^{-1} + T_{k,i}^{-1})^{-1}(u_k - u_i) = T_{ik}(u_k - u_i)
     \end{aligned}
     \label{eq:flux}
 \end{equation}
-we manage to eliminate $\tilde{u}_{i,k}$ and get a computable expression for the gradient of $u$. This is called the two-point flux-approximation (TPFA) \emph{\citep{lieMrstUrl}}. Now that we have an approximation of the flux through the boundary between $\Omega_i$ and $\Omega_k$ we get that equation \eqref{eq:fluxOverBoundary} can be approximated by 
+we manage to eliminate $\tilde{u}_{i,k}$ and get a computable expression for the gradient of $u$. This is called the two-point flux-approximation (TPFA) \emph{\citep{lieMrstUrl}}. Now that we have an approximation of the flux through the interface between $\Omega_i$ and $\Omega_k$ we get that Equation (\ref{eq:fluxOverBoundary}) can be approximated by 
 \begin{equation}
-    \sum_k T_{i,k}(u_k - u_i) = q_i, \hspace{3em} \forall \Omega_i \in \Omega
+    \sum_k T_{i,k}(u_k - u_i) = q_i, \hspace{3em} \forall \Omega_i \in \Omega,
     \label{eq:PoissonSolvableTwoCells}
 \end{equation}
-Where $q_i$ is the total production in cell $\Omega_i$. Now we can get a linear system of the form \textbf{A}\textbf{u} = \textbf{b},  which on residual form becomes \textbf{F}(\textbf{u}) = \textbf{A}\textbf{u} - \textbf{b} = 0 where
+where $q_i$ is the total production in cell $\Omega_i$. Now, we can get a linear system of the form \textbf{A}\textbf{u} = \textbf{b},  which on residual form becomes \textbf{F}(\textbf{u}) = \textbf{A}\textbf{u} - \textbf{b} = 0 where
 \begin{align*}
     \textbf{A}_{i,j} = 
     \left\lbrace
     \begin{array}{lr}
-    \sum_k T_{i,k} \hspace{3em}&\text{if } j = 1\\
-    -T_{i,j} \hspace{3em}&\text{if } j \neq i
+    \sum_k T_{ik} \hspace{3em}&\text{if } j = i\\
+    -T_{ij} \hspace{3em}&\text{if } j \neq i.
     \end{array}
     \right.
 \end{align*}
 This means we can solve the Poisson equation \eqref{eq:Poisson}, using the scheme explained in \eqref{eq:newtonRaphsonVector} and by having $u$ as an AD-variable. But we still end up with a linear system of equations that we may as well solve without AD. 
 
-To show the real elegance of using AD to solve PDE's we want to create a framework where we have defined discrete divergence and gradient operators such that we can write the discrete equations we want to solve on a similar form as in the continuous case. We also want to be able to do this no matter how complex and unstructured grid we have. Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells} consider a more complex grid like we have in \autoref{fig:partialGrid}. The figure shows a part of some larger grid. To define the discrete divergence and gradient operators we need some information about the topology of the grid. The grid consist of three types of objects: cells, facets and nodes. The cells are each $\Omega_i \subset \Omega$ and in our two-dimensional case the facets are simply the lines between each cell. The nodes are defined points based on the method we use where we want to find the value of the function we search. In the case of \autoref{fig:gridTwoCells} we had two nodes, $u_i$ and $u_k$. Each cell and facet has physical properties like area or length and centroid or centre. The facets also has a normal vector. \autoref{fig:partialGrid} shows how we have two different mappings that explains the relation between the cells and the facets where the values dependent on cell 5 and 8 are written out. The first mapping $F(c)$ is mapping from cell $c$ to facet $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
+\subsection{Discrete Differentiation Operators}
+To show the real elegance of using AD to solve PDEs we want to create a framework in which we have defined discrete divergence and gradient operators such that we can write the discrete equations we want to solve on a similar form as in the continuous case. We also want to be able to do this no matter how complex and unstructured grid we have.
+
+Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells}, we now consider a a general polygonal grid. \autoref{fig:partialGrid} illustrates an example, in which all cells are quadrilaterals. To define the discrete divergence and gradient operators, we need some information about the topology of the grid. The grid can be described in terms of three types of objects: cells, facets and vertices. The cells are each $\Omega_i \subset \Omega$. In our two-dimensional case, the facets are simply the lines that delimit each cell, and the vertices are the endpoints of each facet. In addition, we introduce nodes, which are defined points based on the method we use where we want to find the value of the function we search. In the case of \autoref{fig:gridTwoCells} we had two nodes, $u_i$ and $u_k$. Each cell and facet has physical properties like area or length and centroid or centre. Each facet also has a normal vector. 
 \begin{figure}[htb]
     \centering
     \includegraphics[width = 0.7\textwidth]{figures/grid_cells_facets.pdf}
@@ -335,16 +343,18 @@ To show the real elegance of using AD to solve PDE's we want to create a framewo
     \label{fig:partialGrid}
 \end{figure}
 
-We now have all the physical properties of the grid we used to attain the formulae in equation \eqref{eq:PoissonSolvableTwoCells}, but now we want to create discrete divergence and gradient operators that corresponds to the continuous equivalents for this grid. Consider the Poisson equation \eqref{eq:Poisson} for the function $u$. Then the gradient operator for a facet $f$ is defined as 
+\autoref{fig:partialGrid} shows how we can introduce two different mappings that explain the relation between the cells and the facets, where the values dependent on cells 5 and 8 are written out. The first $F(c)$, is mapping from cells $c$ to their delimiting facets $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
+
+We now have all the physical properties of the grid we used to attain the formulae in equation \eqref{eq:PoissonSolvableTwoCells}. From these, we want to create discrete divergence and gradient operators that correspond to the continuous equivalents for this grid. Consider the Poisson equation \eqref{eq:Poisson} for the function $u$. Then the discrete gradient operator for a facet $f$ is defined as 
 \begin{equation}
-    \texttt{gradient}(u)[f] = u[C_2(f)] - u[C_1(f)] 
+    \texttt{gradient}(u)[f] = u[C_2(f)] - u[C_1(f)], 
     \label{eq:discreteGradient}
 \end{equation}
-when $u[C_i(f)]$ is the value of u at the cell corresponding to $C_i(f)$. For the divergence operator, we remember the expression we found for the flux through a facet in equation \eqref{eq:flux}. Let $v_{i,k} = v[f]$ when f is the facet between cell $i$ and cell $k$. Since the divergence in a cell is the same as the sum of flux leaving and entering the cell, the discrete divergence operator for a cell $c$ is defined as 
+where $u[C_i(f)]$ is the value of u at the cell corresponding to $C_i(f)$. For the divergence operator, we remember the expression we found for the flux through a facet in equation \eqref{eq:flux}. Let $v_{i,k} = v[f]$, where $f$ is the facet between cell $i$ and cell $k$. Since the divergence in a cell is the same as the sum of flux leaving and entering the cell, the discrete divergence operator for cell $c$ is defined as 
 \begin{equation*}
-    \texttt{divergence}(\textbf{v})[c] = \sum_{f\in f(c)} \text{sgn}(f)\textbf{v}[f]
+    \texttt{divergence}(\textbf{v})[c] = \sum_{f\in f(c)} \operatorname{sgn}(f)\textbf{v}[f]
 \end{equation*}
-where the function sgn($f$) is defined as 
+where the function $\operatorname{sgn}(f)$ is defined as 
 \begin{align*}
     \text{sgn}(f) = \left\lbrace
     \begin{array}{rl}
@@ -353,12 +363,12 @@ where the function sgn($f$) is defined as
     \end{array}
     \right.
 \end{align*}
-Hence we can now, only based on the topology of the grid, create discrete divergence and gradient operators such that the discrete Poisson equations we want to solve, can now be written very similar as for the continuous case:
+Hence, we can now, only based on the topology of the grid, create discrete divergence and gradient operators such that the discrete Poisson equations we want to solve can be written very similar as for the continuous case:
 \begin{align*}
     -\nabla(\textbf{K}\nabla u) - q &= 0 \\
     \textbf{F}(\textbf{u}) = \texttt{divergence}(\textbf{T }\texttt{gradient}(\textbf{u}))-\textbf{q} &= 0.
 \end{align*}
-Here \textbf{T} is the transmissibility matrix defined in \eqref{eq:transmissibility}. We can see how similar the notation for the discrete equations are to the continuous equation. We can actually read the discrete expression and directly understand what equation we are trying to solve. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it, but for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid and although the system becomes non-linear it will be easy to solve using AD and Newton-Raphson method. An example of this can be seen in \autoref{sec:FlowSolver}.
+Here, \textbf{T} is the transmissibility matrix defined in \eqref{eq:transmissibility}. We can see how similar the notation for the discrete equations is to the continuous equation. We can actually read the discrete expression and directly understand what equation we are trying to solve. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it, but for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid and although the system becomes non-linear, it will be easy to solve using AD and the Newton-Raphson method. An example of this can be seen in \autoref{sec:FlowSolver}.
 
  
 
