--- a/configurations/packages.sty
+++ b/configurations/packages.sty
@@ -103,6 +103,7 @@
 \usepackage{wrapfig}
 \usepackage{marvosym}
 \usepackage{todonotes}
+\usepackage[none]{hyphenat}
 \usepackage{rotating}
 \usepackage[version=4]{mhchem}
 \usepackage{ifthen}             % for bruk av den nye kommandoen \note{}
