--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -95,3 +95,24 @@ year = {n.d.},
   year = {n.d.},
   note = {Accessed 02.12.2018}
 }
+
+@article{doi:10.1137/080743627,
+author = {Neidinger, R.},
+title = {Introduction to Automatic Differentiation and MATLAB Object-Oriented Programming},
+journal = {SIAM Review},
+volume = {52},
+number = {3},
+pages = {545-563},
+year = {2010},
+doi = {10.1137/080743627},
+
+URL = { 
+        https://doi.org/10.1137/080743627
+    
+},
+eprint = { 
+        https://doi.org/10.1137/080743627
+    
+}
+
+}
